[package]
name = "server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws", "macros"] }
tracing = { workspace = true }

utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

thiserror = { workspace = true }
error-stack = { workspace = true }

nix = { workspace = true, default-features = false, features = ["signal"] }

config = { path = "../config" }
model = { path = "../model" }

server_common = { path = "../server_common" }

server_data = { path = "../server_data" }
server_data_all = { path = "../server_data_all" }
server_data_profile = { path = "../server_data_profile" }
server_data_media = { path = "../server_data_media" }

server_api = { path = "../server_api" }
server_api_account = { path = "../server_api_account" }
server_api_profile = { path = "../server_api_profile" }
server_api_media = { path = "../server_api_media" }
server_api_chat = { path = "../server_api_chat" }

server_state = { path = "../server_state" }

server_router_account = { path = "../server_router_account" }
server_router_profile = { path = "../server_router_profile" }
server_router_media = { path = "../server_router_media" }
server_router_chat = { path = "../server_router_chat" }

simple_backend = { path = "../simple_backend" }
simple_backend_utils = { path = "../simple_backend_utils" }
simple_backend_config = { path = "../simple_backend_config" }
