[package]
name = "server_api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

hyper = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws", "macros"] }
tracing = { workspace = true }
headers = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

utoipa = { workspace = true, features = ["axum_extras", "uuid"] }

thiserror = { workspace = true }
error-stack = { workspace = true }

manager_model = { path = "../app-manager/crates/manager_model" }

utils = { path = "../utils" }
config = { path = "../config" }
model = { path = "../model" }
api_internal = { path = "../api_internal" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }

simple_backend = { path = "../simple_backend" }
simple_backend_config = { path = "../simple_backend_config" }
simple_backend_model = { path = "../simple_backend_model" }
