[package]
name = "server_api"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
hyper = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tracing = { workspace = true }
headers = { workspace = true }
http = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }

manager_model = { path = "../manager_model" }

utils = { path = "../utils" }
config = { path = "../config" }
model = { path = "../model" }
model_server_data = { path = "../model_server_data" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }
server_state = { path = "../server_state" }

simple_backend = { path = "../simple_backend" }
simple_backend_config = { path = "../simple_backend_config" }
simple_backend_model = { path = "../simple_backend_model" }
simple_backend_utils = { path = "../simple_backend_utils" }
manager_api = { path = "../manager_api" }
