[package]
name = "server_api_account"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

serde_urlencoded = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

base64 = { workspace = true }

model = { path = "../model" }
model_server_state = { path = "../model_server_state" }
model_account = { path = "../model_account" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }
server_api = { path = "../server_api" }

server_data_account = { path = "../server_data_account" }

simple_backend = { path = "../simple_backend" }
