[package]
name = "server_api_all"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }

serde_json = { workspace = true }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws", "macros"] }
axum-extra = { workspace = true, features = ["typed-header"] }
tracing = { workspace = true }

utoipa = { workspace = true, features = ["axum_extras", "uuid"] }

thiserror = { workspace = true }

utils = { path = "../utils" }
model = { path = "../model" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }
server_api = { path = "../server_api" }

server_data_account = { path = "../server_data_account" }
server_data_profile = { path = "../server_data_profile" }
server_data_chat = { path = "../server_data_chat" }
server_data_all = { path = "../server_data_all" }

simple_backend = { path = "../simple_backend" }
simple_backend_utils = { path = "../simple_backend_utils" }
