[package]
name = "server_api_chat"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
headers = { workspace = true }

utoipa = { workspace = true }
serde_json = { workspace = true }

model = { path = "../model" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }
server_api = { path = "../server_api" }

server_data_chat = { path = "../server_data_chat" }

simple_backend = { path = "../simple_backend" }

obfuscate_api_macro = { path = "../obfuscate_api_macro" }
