[package]
name = "server_api_chat"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
headers = { workspace = true }
http = { workspace = true }

tokio = { workspace = true }
serde_json = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }

base64 = { workspace = true }
pgp = { workspace = true }

model = { path = "../model" }
model_chat = { path = "../model_chat" }

server_common = { path = "../server_common" }
server_api = { path = "../server_api" }

server_data = { path = "../server_data" }
server_data_chat = { path = "../server_data_chat" }

utils = { path = "../utils" }
simple_backend = { path = "../simple_backend" }
