[package]
name = "server_api_media"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["ws", "macros"] }
axum-extra = { workspace = true, features = ["typed-header"] }
tracing = { workspace = true }
headers = { workspace = true }

utoipa = { workspace = true, features = ["axum_extras", "uuid"] }

model = { path = "../model" }
api_internal = { path = "../api_internal" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }
server_api = { path = "../server_api" }

server_data_media = { path = "../server_data_media" }

simple_backend = { path = "../simple_backend" }
