[package]
name = "server_api_media"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tracing = { workspace = true }
headers = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }

model = { path = "../model" }
model_media = { path = "../model_media" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }
server_api = { path = "../server_api" }

server_data_media = { path = "../server_data_media" }

simple_backend = { path = "../simple_backend" }
