[package]
name = "server_api_profile"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["ws", "macros"] }

utoipa = { workspace = true }

model = { path = "../model" }

server_common = { path = "../server_common" }
server_data = { path = "../server_data" }
server_api = { path = "../server_api" }

server_data_profile = { path = "../server_data_profile" }

simple_backend = { path = "../simple_backend" }
simple_backend_utils = { path = "../simple_backend_utils" }
